testcases/error/invalid_number_character.veryl
module invalid_number_character {
    let _a: logic = 'b123;
}
